--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -65,26 +65,14 @@
         android:textStyle="bold" />
 
 
-
-
-    <Button
-        android:id="@+id/btImportPhoto"
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        android:text="Import Photo"
-        android:textSize="10sp"
-        android:layout_below="@+id/btSave"
-        android:layout_toEndOf="@+id/btTakePhoto" />
-
     <EditText
         android:id="@+id/tvDate"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        android:layout_alignBottom="@+id/ibCalendar"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/ibCalendar" />
+        android:layout_alignTop="@+id/btImportPhoto"
+        android:ems="10"
+        android:inputType="date" />
 
     <ImageButton
         android:id="@+id/ibCalendar"
@@ -92,8 +80,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_date_range_black_24dp"
         android:layout_below="@+id/btSave"
-        android:layout_toEndOf="@+id/btImportPhoto"
-        android:layout_alignBottom="@+id/btImportPhoto" />
+        android:layout_toStartOf="@+id/tvDate" />
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -111,8 +98,8 @@
         android:layout_height="wrap_content"
         android:onClick="onRadioButtonClicked"
         android:text="Personal"
-        android:layout_below="@+id/btImportPhoto"
-        android:layout_toStartOf="@+id/tvDate" />
+        android:layout_below="@+id/ibCalendar"
+        android:layout_toEndOf="@+id/btImportPhoto" />
 
     <RadioButton
         android:id="@+id/rHistorical"
@@ -157,8 +144,17 @@
         android:backgroundTint="@color/colorWhite"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/take_photo"
-        android:layout_alignTop="@+id/tvDate"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/btImportPhoto" />
+        android:layout_alignTop="@+id/btImportPhoto"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:id="@+id/btImportPhoto"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/colorWhite"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/import_photo"
+        android:layout_alignBottom="@+id/ibCalendar"
+        android:layout_toEndOf="@+id/btTakePhoto" />
 
 </RelativeLayout>
