--- a/app/src/main/res/drawable/round_outline_transparent.xml
+++ b/app/src/main/res/drawable/round_outline_transparent.xml
@@ -3,15 +3,12 @@
 
     <item>
         <shape android:shape="rectangle">
-
-            <gradient
-                android:angle="90"
-                android:endColor="#00ffffff"
-                android:startColor="#0b000000"
-                android:centerColor="#00ffffff" />
-
+            <!--apply button background transparent, full opacity-->
+            <solid android:color="#00ffffff"/>
+            <!--make button border solid color, nontransparent-->
             <corners android:radius="5dp"/>
         </shape>
     </item>
+
 
 </selector>
