--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -99,7 +99,7 @@
         android:onClick="onRadioButtonClicked"
         android:text="Personal"
         android:layout_below="@+id/ibCalendar"
-        android:layout_toEndOf="@+id/btImportPhoto" />
+        android:layout_alignParentStart="true" />
 
     <RadioButton
         android:id="@+id/rHistorical"
@@ -124,10 +124,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post anonymously?"
-        android:layout_alignBaseline="@+id/rHistorical"
-        android:layout_alignBottom="@+id/rHistorical"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/rHistorical" />
+        android:layout_below="@+id/ibCalendar"
+        android:layout_alignParentEnd="true" />
 
     <ImageView
         android:id="@+id/ivPreview"
@@ -139,22 +137,25 @@
 
     <ImageButton
         android:id="@+id/btTakePhoto"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="29dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@+id/tvDate"
+        android:layout_marginBottom="11dp"
+        android:tint="@color/colorAccent"
+        android:background="@android:color/transparent"
         android:backgroundTint="@color/colorWhite"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/take_photo"
-        android:layout_alignTop="@+id/btImportPhoto"
-        android:layout_alignParentStart="true" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/take_photo" />
 
     <ImageButton
         android:id="@+id/btImportPhoto"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/colorWhite"
+        android:tint="@color/colorAccent"
+        android:backgroundTint="@android:color/transparent"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/import_photo"
-        android:layout_alignBottom="@+id/ibCalendar"
+        android:layout_below="@+id/btSave"
         android:layout_toEndOf="@+id/btTakePhoto" />
 
 </RelativeLayout>
