--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -121,31 +121,32 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/ibCalendar"
         android:text="Anonymous?"
-        android:layout_toEndOf="@+id/ibCalendar" />
+        android:layout_toEndOf="@+id/rFictional" />
 
     <ImageButton
         android:id="@+id/btTakePhoto"
         android:layout_width="29dp"
-        android:layout_height="25dp"
-        android:tint="@color/colorAccent"
+        android:layout_height="20dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@color/colorWhite"
-        android:scaleType="centerCrop"
-        android:layout_marginBottom="11dp"
+        android:scaleType="fitCenter"
+        android:tint="@color/colorAccent"
         app:srcCompat="@drawable/take_photo"
-        android:layout_alignBottom="@+id/tvDate"
+        android:layout_below="@+id/etStoryBody"
         android:layout_alignParentStart="true" />
 
     <ImageButton
         android:id="@+id/btImportPhoto"
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:tint="@color/colorAccent"
+        android:layout_height="40dp"
+        android:layout_alignTop="@+id/rHistorical"
+        android:layout_toEndOf="@+id/btTakePhoto"
         android:backgroundTint="@android:color/transparent"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/import_photo"
-        android:layout_below="@+id/etStoryBody"
-        android:layout_toEndOf="@+id/btTakePhoto" />
+        android:cropToPadding="false"
+        android:layout_marginTop="3dp"
+        android:scaleType="fitStart"
+        android:tint="@color/colorAccent"
+        app:srcCompat="@drawable/import_image_dark" />
 
     <ImageView
         android:id="@+id/ivPreview"
