--- a/app/src/main/res/layout/fragment_stories_dialog.xml
+++ b/app/src/main/res/layout/fragment_stories_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,10 +9,17 @@
         android:layout_width="350dp"
         android:layout_height="400dp"/>
 
-    <ImageButton
-        android:id="@+id/ibPlus"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btPlus"
+        android:layout_width="327dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add_box_black_24dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@color/colorAccent"
+        android:text="Add your own memory here"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 </LinearLayout>
