--- a/app/src/main/res/drawable/round_outline_transparent.xml
+++ b/app/src/main/res/drawable/round_outline_transparent.xml
@@ -4,7 +4,11 @@
     <item>
         <shape android:shape="rectangle">
             <!--apply button background transparent, full opacity-->
-            <solid android:color="#00ffffff"/>
+            <gradient
+                android:angle="90"
+                android:endColor="#00ffffff"
+                android:startColor="#1c000000"
+                android:centerColor="#00000000" />
             <!--make button border solid color, nontransparent-->
             <corners android:radius="5dp"/>
         </shape>
