--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -55,21 +55,22 @@
         android:id="@+id/tvDate"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/btImportPhoto"
         android:ems="10"
-        android:inputType="date" />
+        android:inputType="date"
+        android:layout_below="@+id/etStoryBody"
+        android:layout_alignParentEnd="true" />
 
     <ImageButton
         android:id="@+id/ibCalendar"
-        android:layout_width="50dp"
+        android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_alignTop="@+id/tvDate"
-        android:layout_toStartOf="@+id/tvDate"
         android:backgroundTint="@android:color/transparent"
-        android:scaleType="centerCrop"
+        android:paddingTop="10dp"
+        android:scaleType="fitXY"
         android:tint="@color/colorAccent"
-        app:srcCompat="@drawable/calendar_dark" />
+        app:srcCompat="@drawable/calendar_dark"
+        android:layout_alignBottom="@+id/tvDate"
+        android:layout_toStartOf="@+id/swAnonymous" />
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -99,20 +100,21 @@
         android:scaleType="fitCenter"
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/take_photo"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/etStoryBody"
-        android:layout_alignParentStart="true" />
+        android:layout_toEndOf="@+id/ivPreview" />
 
     <ImageButton
         android:id="@+id/btImportPhoto"
         android:layout_width="50dp"
         android:layout_height="25dp"
-        android:layout_below="@+id/etStoryBody"
-        android:layout_toEndOf="@+id/btTakePhoto"
         android:backgroundTint="@android:color/transparent"
         android:cropToPadding="false"
         android:scaleType="centerCrop"
         android:tint="@color/colorAccent"
-        app:srcCompat="@drawable/import_image_dark" />
+        app:srcCompat="@drawable/import_image_dark"
+        android:layout_alignTop="@+id/btTakePhoto"
+        android:layout_toEndOf="@+id/btTakePhoto" />
 
     <ImageView
         android:id="@+id/ivPreview"
@@ -138,36 +140,37 @@
 
     <ImageButton
         android:id="@+id/ibPersonal"
-        android:layout_width="25dp"
+        android:layout_width="30dp"
         android:layout_height="25dp"
-        android:layout_below="@+id/btTakePhoto"
-        android:layout_marginStart="11dp"
-        android:layout_toEndOf="@+id/btImportPhoto"
         android:background="@drawable/color_accent"
         android:scaleType="fitCenter"
         android:tint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/personal" />
+        app:srcCompat="@drawable/personal"
+        android:layout_alignTop="@+id/ibHistorical"
+        android:layout_toEndOf="@+id/btImportPhoto" />
 
     <ImageButton
         android:id="@+id/ibHistorical"
-        android:layout_width="25dp"
+        android:layout_width="30dp"
         android:layout_height="25dp"
-        android:layout_alignTop="@+id/ibPersonal"
-        android:layout_toEndOf="@+id/ibPersonal"
         android:background="@drawable/color_accent"
         android:scaleType="centerInside"
         android:tint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/historical" />
+        app:srcCompat="@drawable/historical"
+        android:layout_marginLeft="10dp"
+        android:layout_alignTop="@+id/ibFictional"
+        android:layout_toStartOf="@+id/ibFictional"
+        android:layout_marginEnd="13dp" />
 
     <ImageButton
         android:id="@+id/ibFictional"
-        android:layout_width="25dp"
+        android:layout_width="30dp"
         android:layout_height="25dp"
         android:background="@drawable/color_accent"
         android:scaleType="centerInside"
         android:tint="@color/colorWhite"
         app:srcCompat="@drawable/fictional"
-        android:layout_alignTop="@+id/ibHistorical"
-        android:layout_toEndOf="@+id/ibHistorical" />
+        android:layout_alignTop="@+id/btImportPhoto"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
