--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -9,6 +9,25 @@
     android:weightSum="1">
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:layout_alignEnd="@+id/btImportPhoto"
+        android:layout_below="@+id/ibPersonal"
+        android:text="IMAGES"
+        android:textAlignment="center"
+        android:textSize="9dp" />
+
+    <TextView
+        android:id="@+id/tvImage"
+        android:layout_width="100dp"
+        android:layout_height="10dp"
+        android:text="CATEGORIES"
+        android:textSize="9dp"
+        android:layout_alignBottom="@+id/ibCalendar"
+        android:layout_toStartOf="@+id/swAnonymous" />
+
+    <TextView
         android:text="Title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -53,12 +72,12 @@
 
     <EditText
         android:id="@+id/tvDate"
-        android:layout_width="120dp"
+        android:layout_width="95dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/etStoryBody"
-        android:layout_alignParentEnd="true" />
+        android:ems="10"
+        android:inputType="date" />
 
     <ImageButton
         android:id="@+id/ibCalendar"
@@ -70,17 +89,7 @@
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/calendar_dark"
         android:layout_alignBottom="@+id/tvDate"
-        android:layout_toStartOf="@+id/swAnonymous" />
-
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/ivPreview"
-        android:layout_alignParentStart="true"
-        android:id="@+id/radioGroup">
-
-    </RadioGroup>
+        android:layout_toStartOf="@+id/tvDate" />
 
     <Switch
         android:id="@+id/swAnonymous"
@@ -100,8 +109,7 @@
         android:scaleType="fitCenter"
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/take_photo"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/etStoryBody"
+        android:layout_alignTop="@+id/btImportPhoto"
         android:layout_toEndOf="@+id/ivPreview" />
 
     <ImageButton
@@ -113,13 +121,13 @@
         android:scaleType="centerCrop"
         android:tint="@color/colorAccent"
         app:srcCompat="@drawable/import_image_dark"
-        android:layout_alignTop="@+id/btTakePhoto"
+        android:layout_above="@+id/textView2"
         android:layout_toEndOf="@+id/btTakePhoto" />
 
     <ImageView
         android:id="@+id/ivPreview"
         android:layout_width="wrap_content"
-        android:layout_height="295dp"
+        android:layout_height="250dp"
         android:layout_above="@+id/btSave"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp"
@@ -138,39 +146,43 @@
         android:textSize="20dp"
         android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/ibPersonal"
-        android:layout_width="30dp"
-        android:layout_height="25dp"
-        android:background="@drawable/color_accent"
-        android:scaleType="fitCenter"
-        android:tint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/personal"
-        android:layout_alignTop="@+id/ibHistorical"
-        android:layout_toEndOf="@+id/btImportPhoto" />
 
-    <ImageButton
-        android:id="@+id/ibHistorical"
-        android:layout_width="30dp"
-        android:layout_height="25dp"
-        android:background="@drawable/color_accent"
-        android:scaleType="centerInside"
-        android:tint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/historical"
-        android:layout_marginLeft="10dp"
-        android:layout_alignTop="@+id/ibFictional"
-        android:layout_toStartOf="@+id/ibFictional"
-        android:layout_marginEnd="13dp" />
 
-    <ImageButton
-        android:id="@+id/ibFictional"
-        android:layout_width="30dp"
-        android:layout_height="25dp"
-        android:background="@drawable/color_accent"
-        android:scaleType="centerInside"
-        android:tint="@color/colorWhite"
-        app:srcCompat="@drawable/fictional"
-        android:layout_alignTop="@+id/btImportPhoto"
-        android:layout_centerHorizontal="true" />
+        <ImageButton
+            android:id="@+id/ibPersonal"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:background="@drawable/color_accent"
+            android:scaleType="fitCenter"
+            android:tint="@color/colorPrimaryDark"
+            app:srcCompat="@drawable/personal"
+            android:layout_above="@+id/tvImage"
+            android:layout_toStartOf="@+id/ibHistorical" />
+
+        <ImageButton
+            android:id="@+id/ibHistorical"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/color_accent"
+            android:scaleType="centerInside"
+            android:tint="@color/colorPrimaryDark"
+            app:srcCompat="@drawable/historical"
+            android:layout_above="@+id/tvImage"
+            android:layout_alignStart="@+id/tvImage" />
+
+        <ImageButton
+            android:id="@+id/ibFictional"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:background="@drawable/color_accent"
+            android:scaleType="centerInside"
+            android:tint="@color/colorWhite"
+            app:srcCompat="@drawable/fictional"
+            android:layout_weight="2.60"
+            android:layout_above="@+id/tvImage"
+            android:layout_toStartOf="@+id/ibCalendar" />
+
+
 
 </RelativeLayout>
