--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -53,33 +53,21 @@
         android:fastScrollEnabled="true"
         android:text="TextView"
         android:textColor="@android:color/black" />
-    <!--</ScrollView>-->
-
-
-    <ImageView
-        android:id="@+id/ivHeartFiller"
-        android:layout_width="30dp"
-        android:layout_height="27dp"
-        android:layout_alignBottom="@+id/ibFavorite"
-        android:layout_alignStart="@+id/ibFavorite"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="15dp"
-        android:scaleType="fitXY"
-        android:tint="@color/colorHeart"
-        android:visibility="visible"
-        app:srcCompat="@drawable/ic_favorite_black_24dp" />
 
     <ImageButton
-        android:id="@+id/ibFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="-12dp"
-        android:layout_marginTop="-8dp"
-        android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_favorite_border_black_24dp" />
+        android:id="@+id/ibFav"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:adjustViewBounds="false"
+        android:background="@null"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
+        android:visibility="visible"
+        app:srcCompat="@drawable/favorite"
+        android:layout_alignBottom="@+id/ivImage"
+        android:layout_alignParentEnd="true" />
 
+    <!--</ScrollView>-->
 
 
 </RelativeLayout>
