--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -68,6 +68,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
+    <ImageView
+        android:id="@+id/ivShadow"
+        android:layout_width="390dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/tvStoryBody"
+        app:srcCompat="@drawable/above_shadow"
+        android:layout_alignParentStart="true" />
+
     <!--</ScrollView>-->
 
 
